--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,19 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
+    <item android:id="@+id/greekboard"
+        android:title="Greek"
+        android:orderInCategory="100"
+        app:showAsAction="always"/>
+    <item android:id="@+id/norseboard"
+        android:title="Norse"
+        android:orderInCategory="100"
+        app:showAsAction="always"/>
+    <item android:id="@+id/egyptboard"
+        android:title="Egypt"
+        android:orderInCategory="100"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
