Fixed house and added placing victory cube

--- a/app/src/main/res/layout/fragment_victory_card_view.xml
+++ b/app/src/main/res/layout/fragment_victory_card_view.xml
@@ -27,6 +27,6 @@
             android:layout_height="wrap_content"
 
             android:layout_centerInParent="true"
-            android:text="Next"/>
+            android:text="Okay"/>
     </RelativeLayout>
 </LinearLayout>
