--- a/app/src/main/res/layout/fragment_pick_card.xml
+++ b/app/src/main/res/layout/fragment_pick_card.xml
@@ -8,7 +8,8 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:columnWidth="250dp"
         android:numColumns="8"
         android:verticalSpacing="10dp"
