--- a/app/src/main/res/layout/fragment_main_playing.xml
+++ b/app/src/main/res/layout/fragment_main_playing.xml
@@ -23,7 +23,13 @@
             <TextView
                 android:id="@+id/food"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
             <TextView
                 android:id="@+id/wood"
                 android:layout_width="match_parent"
@@ -34,6 +40,10 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/favor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/victory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
