--- a/app/src/main/res/layout/fragment_building_selection_dialog.xml
+++ b/app/src/main/res/layout/fragment_building_selection_dialog.xml
@@ -5,6 +5,12 @@
     tools:context="com.anycomp.android.ageofmythology.BuildingSelectionDialogFragment"
     android:orientation="vertical">
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="24sp"/>
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
