Added god power options

--- a/app/src/main/res/layout/fragment_main_playing.xml
+++ b/app/src/main/res/layout/fragment_main_playing.xml
@@ -13,40 +13,67 @@
         android:layout_height="0dp"
         android:layout_weight="0.5">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#ff313131">
             <TextView
                 android:id="@+id/current_age"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
             <TextView
                 android:id="@+id/food"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
                 />
 
             <TextView
                 android:id="@+id/wood"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
             <TextView
                 android:id="@+id/gold"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
             <TextView
                 android:id="@+id/favor"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
             <TextView
                 android:id="@+id/victory"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
             <TextView
                 android:id="@+id/villager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#ffffe52f"
+                />
         </LinearLayout>
 
     </RelativeLayout>
