--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,13 +15,13 @@
         android:orderInCategory="100"
         app:showAsAction="always"/>
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never"/>
     <item android:id="@+id/pick_card"
-            android:title="Pick Card"
-            android:orderInCategory="101"
-            app:showAsAction="never"/>
+        android:title="Pick Card"
+        android:orderInCategory="101"
+        app:showAsAction="never"/>
     <item android:id="@+id/play_card"
         android:title="Play Card"
         android:orderInCategory="102"
@@ -62,5 +62,13 @@
         android:title="Take Tiles(For Test)"
         android:orderInCategory="111"
         app:showAsAction="never"/>
+    <item android:id="@+id/advance_age"
+        android:title="Advance Age"
+        android:orderInCategory="112"
+        app:showAsAction="never" />
+    <item android:id="@+id/recruit_god_card"
+        android:title="Take Recruit God Card (For Test)"
+        android:orderInCategory="113"
+        app:showAsAction="never" />
 
 </menu>
