--- a/app/src/main/res/layout/fragment_take_resource_dialog.xml
+++ b/app/src/main/res/layout/fragment_take_resource_dialog.xml
@@ -39,6 +39,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <TextView
+            android:id="@+id/text_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/opponent_resource" />
